--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "web3": "^1.7.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   },
   "browserslist": [
