--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@liripeng/vue-audio-player": "^1.5.0",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.6.5",
-    "lottie-web": "^5.9.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "web3": "^1.7.1"
