--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "crypto-donate-lite-v2",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.16.0"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
